add reverse integer